--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ main {
 
 .card .social .comment::before {
    content: '💬 ';
-   color: blue);
+   color: rgb(21, 0, 255));
 }
 
 /* Responsive design */
